--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.1",
     "@material-tailwind/react": "^2.1.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.35.3",
     "axios": "^1.5.0",
+    "chart.js": "^4.4.0",
     "class-variance-authority": "^0.7.0",
+    "faker": "^6.6.6",
     "i18next": "^23.5.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
     "react-i18next": "^13.2.2",
