--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
+    "react-select": "^5.10.1",
     "react-tailwindcss-select": "^1.8.5",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
