--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-select": "^5.10.1",
     "react-tailwindcss-select": "^1.8.5",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.15.3",
     "sort-by": "^1.2.0",
     "yup": "^1.3.0"
   },
